get-messages-from-database

--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
     "start": "nodemon app.js"
   },
   "author": "Amlend Jadaun",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.4",
+    "sequelize": "^6.37.2",
+    "validator": "^13.11.0"
+  }
 }
