--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "author": "Amlend Jadaun",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1599.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "sequelize": "^6.37.2",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "validator": "^13.11.0"
   }
 }
